# JFiTT

./: .gitignore  README.md
lab_1/: CMakeLists.txt  README.md  test.txt
lab_1/include/: FiniteAutomate.hpp  InputParser.hpp  KMPMatcher.hpp
lab_1/src/: FiniteAutomate.cpp  InputParser.cpp  KMPMatcher.cpp  main.cpp
lab_1/test/: TestFiniteAutomate.cpp  TestInputParser.cpp  TestKMPMatcher.cpp
lab_1/tests/: CMakeLists.txt  test_main.cpp
lab_1_python/: pyproject.toml
lab_1_python/src/: finite_automate.py  input_parser.py  kmp_matcher.py  main.py  test_input.txt
lab_1_python/test/: test_automate.py
lab_2/: RAPORT.txt  README.md  run_all_tasks.sh
lab_2/c_files/: zadanie1.c  zadanie2.c  zadanie3.c  zadanie4.c
lab_2/executables/: zadanie1  zadanie2  zadanie3  zadanie4
lab_2/flex/: zadanie1.lx  zadanie2.lx  zadanie3.lx  zadanie4.lx
lab_2/test_files/: plik_testowy.txt  test.cpp  test.py
